# Project_LLM

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: base.yaml
docs/: USAGE.md
eval/: __init__.py  run_evals.py
finetune/: __init__.py  dpo.py  sft.py
inference/: __init__.py  generate.py  server.py
model/: __init__.py  transformer.py
scripts/: __init__.py  clean_artifacts.ps1  prepare_data.py  run_all.sh  train_tokenizer.py
tests/: test_model.py
train/: __init__.py  train.py  utils.py
